--- a/inicio/templates/inicio/saludo_template.html
+++ b/inicio/templates/inicio/saludo_template.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>{{fecha}} Hola {{nombre}} {{apellido}}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block h1_text %}
+  Hola {{ nombre }} {{ apellido }}
+{% endblock %}
+
+{% block main %}
+<h3>{{fecha}}: Como va la cosa ?</h3>
+{% endblock main %}
