--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,10 @@
     <!-- Navigation-->
     <nav class="navbar navbar-light bg-light static-top">
         <div class="container">
-            <a class="navbar-brand" href="#!">Inicio</a>
+            <a class="navbar-brand" href={% url "inicio:inicio" %}>Inicio</a>
+            <a class="navbar-brand" href={% url "inicio:template_prueba" %}>Template</a>
+            <a class="navbar-brand" href={% url "inicio:saludo_template" 'Juan' 'Gonzalez' %}>Saludo</a>
+
             <!-- <a class="btn btn-primary" href="#signup">Sign Up</a> -->
         </div>
     </nav>
