--- a/inicio/templates/subcarpeta/condicion_y_bucle.html
+++ b/inicio/templates/subcarpeta/condicion_y_bucle.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Condición y bucle</h1>
+{% extends "base.html" %}
+{% block h1_text %}Condicion y bucle{% endblock h1_text %}
+{% block main %}{{listado_de_numeros}}
 
+    
+    
     <ul>
-      {{ listado_de_numeros }}
-      {% for num in listado_de_numeros %}
-        <li>
-          {% if num|divisibleby:'2' %}
-            <span style="color: red;font-size:2rem">{{ num }}</span>
-          {% else %}
-            <span style="color: green;font-size:2rem">{{ num }}</span>
-          {% endif %}
-        </li>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+        {% for valor in listado_de_numeros %}
+            <li>
+                {% if valor|divisibleby:"2" %}
+                    <span style="color: red;font-size: 24px">
+                        {{valor}}
+                    </span> 
+                {% else %}
+                    <span style="color: green;font-size: 24px">
+                        {{valor}}
+                    </span> 
+                {% endif %}
+            </li>   
+        {% endfor %}
+    </ul>{% endblock main %}
