--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,7 @@
             <a class="navbar-brand" href={% url "inicio:template_prueba" %}>Template</a>
             <a class="navbar-brand" href={% url "inicio:saludo_template" 'Juan' 'Gonzalez' %}>Saludo</a>
             <a class="navbar-brand" href={% url "inicio:crear_auto" %}>Crear auto</a>
+            <a class="navbar-brand" href={% url "inicio:listado_autos" %}>Autos</a>
 
 
             <!-- <a class="btn btn-primary" href="#signup">Sign Up</a> -->
