Avances de forms

--- a/inicio/templates/inicio/listado_autos.html
+++ b/inicio/templates/inicio/listado_autos.html
@@ -20,7 +20,9 @@
   {% if autos %}
     <ul>
       {% for auto in autos %}
-        <li>{{ auto }}</li>
+        <li>
+          {{ auto}} | <a href={% url "inicio:ver_auto" auto.id %}>Ver mas</a> | <a href={% url "inicio:eliminar_auto" auto.id %}>Eliminar</a> | <a href={% url "inicio:actualizar_auto" auto.id %}>Actualizar</a>
+        </li>
       {% endfor %}
     </ul>
   {% else %}
