--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,10 @@
             <a class="navbar-brand" href={% url "inicio:inicio" %}>Inicio</a>
             <a class="navbar-brand" href={% url "inicio:template_prueba" %}>Template</a>
             <a class="navbar-brand" href={% url "inicio:saludo_template" 'Juan' 'Gonzalez' %}>Saludo</a>
+            {% if request.user.is_authenticated %}
             <a class="navbar-brand" href={% url "inicio:crear_auto" %}>Crear auto</a>
             <a class="navbar-brand" href={% url "inicio:listado_autos" %}>Autos</a>
+            {% endif %}
 
 
             <!-- <a class="btn btn-primary" href="#signup">Sign Up</a> -->
