--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
             {% if request.user.is_authenticated %}
             <a class="navbar-brand" href={% url "inicio:crear_auto" %}>Crear auto</a>
             <a class="navbar-brand" href={% url "inicio:listado_autos" %}>Autos</a>
+            <a class="navbar-brand" href={% url "productos:listado_de_sartenes" %}>Sartenes</a>
             {% endif %}
 
 
